neural_coder_workspace/bench1662018724454043/performance.log
  File "/home2/longxin/Neural_Coder_EXT/tmp.py", line 50
    input_list = []
    ^
SyntaxError: invalid syntax
